syntax = "proto3";

package proto;

option go_package = "proto/";

message Course {
   int32 id = 1;
   string name = 2;
   string description = 3;
   int32 teacher = 4;
   int32 capacity = 5;
   int32 remain = 6;
   string created_at = 7;
   string updated_at = 8;
}

message CourseResponse {
   Course courses = 1;
}

message CourseRequest {
   int32 id = 1;
}

// message CourseListResponse {
//    repeated Course courses = 1;
// }

// message CourseListRequest {
// }




service CourseService {
   rpc GetCourse(CourseRequest) returns (CourseResponse);
   // rpc GetCourses(CourseListRequest) returns (CourseListRequest);
   // rpc CreateCourse(Course) returns (Course);
   // rpc UpdateCourse(Course) returns (Course);
   // rpc DeleteCourse(Course) returns (Course);
}